# artfight-rss

./: .gitignore  Dockerfile  README.md  SETUP.md  alembic.ini  config.example.toml  debug_env.py  docker-compose.yml  env.example  pyproject.toml  test_revision_logic.py
.cursor/rules/: ai-disclosure-preservation.mdc
artfight_feed/: __init__.py  artfight.py  atom.py  cache.py  config.py  database.py  discord_bot.py  event_handlers.py  logging_config.py  main.py  models.py  monitor.py  plotting.py
artfight_rss/: artfight.py  cache.py  config.py  database.py  discord_bot.py  event_handlers.py  logging_config.py  main.py  models.py  monitor.py  plotting.py  rss.py
migrations/: env.py
migrations/versions/: 20250709204048_initial_schema.py  20250709204136_add_team_metrics_and_update_types.py  20250710145346_add_cache_entries_table.py  20250810123831_add_news_table.py  20250810130000_add_news_revisions_and_full_content.py  20260629120000_generalize_team_standings_for_n_teams.py
scripts/: README_plotting.md  check_migrations.py  debug_discord.py  debug_discord_timeout.py  generate_team_plot.py  plot_team_standings.py  setup.py  setup_systemd.py  simple_discord_test.py  test_discord_bot.py  test_discord_bot_fixed.py  test_discord_rss_logic.py  test_logging.py  test_manual_shutdown.py  test_server_shutdown.py  test_shutdown.py  test_team_metrics_parsing.py
scripts/tests/: debug_whitelist.py  test_auth.py  test_auth_cache.py  test_config.py  test_cookie_refresh.py  test_debug_logging.py  test_defenses.py  test_leader_change.py  test_models.py  test_page_delay.py  test_pagination.py  (+7 more)
tests/: test_monitor_running_flags.py  test_news_revisions.py
