[project]
name = "artfight-feed"
version = "0.1.0"
description = "Atom service for monitoring ArtFight profiles, team standings, and news"
authors = [
    {name = "ArtFight Feed Service", email = "admin@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "feedparser>=6.0.10",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "python-dateutil>=2.8.2",
    "schedule>=1.2.0",
    "requests>=2.32.4",
    "tomli>=2.0.0",
    "brotli>=1.1.0",
    "feedgen>=0.9.0",
    "discord.py>=2.3.0",
    "alembic>=1.16.3",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "matplotlib>=3.10.3",
    "redlines>=0.5.2",
    "html2text>=2025.4.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["artfight_feed"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"] 
